--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,8 @@
 
 #login {
   float: right;
+  color: white;
+  border: 1px solid white;
 }
 
 #nav h3 {
@@ -38,7 +40,7 @@
   float: right;
 }
 
-#about {
+#about, #apiSearch, #myLists, #community {
   margin: 10vw;
 }
 
