--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   float: left;
 }
 
-#login {
+#login, #signUp{
   float: right;
   color: white;
   border: 1px solid white;
@@ -42,6 +42,19 @@
 
 #about, #apiSearch, #myLists, #community {
   margin: 10vw;
+}
+
+#signUpForm {
+  color: black;
+  text-align: center;
+}
+
+.navLinks {
+  color: white;
+}
+
+.navLinks:hover {
+  color: #999;
 }
 
 /*.App-title {
