reformatted single movie list to one map function

--- a/src/App.css
+++ b/src/App.css
@@ -57,9 +57,15 @@ body {
 }
 
 #communityMemberSingleList {
-  width: 80vw;
+  width: 80%;
   height: auto;
   text-align: center;
+}
+
+#communityMemberSingleListEachMovie {
+  display: inline-block;
+  width: 20%;
+  height: 10%;
 }
 
 #signUpForm {
